[gd_scene load_steps=9 format=2]

[ext_resource path="res://GFX/Items/portal_yellow.png" type="Texture" id=1]
[ext_resource path="res://GFX/Particles/portal_yellowParticle.png" type="Texture" id=2]
[ext_resource path="res://Items/Portal.gd" type="Script" id=3]
[ext_resource path="res://SFX/portal_sound_fun.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/portal_proximity_sound_effect.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 46.8061
height = 101.223

[sub_resource type="Animation" id=2]
resource_name = "PortalStretch"
length = 3.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.25
orbit_velocity_random = 0.0

[node name="Portal" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 1.25, 1 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 9.20276, -3.25193 )
rotation = -1.5708
scale = Vector2( 0.782947, 1.01727 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 7.54151, -4.00452 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
autoplay = "PortalStretch"
anims/PortalStretch = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Area2D"]
amount = 24
lifetime = 2.0
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
max_distance = 850.0
attenuation = 2.73209

[node name="PortalSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
